--- a/index.css
+++ b/index.css
@@ -198,7 +198,6 @@ transition: all .3s;
     margin: 10px;
     width: 300px;
     border: 1px solid #ccc;
-    text-align: center;
     background-color: #f9f9f9;
     border-radius: 8px;
 }
@@ -211,8 +210,13 @@ transition: all .3s;
 
 .character-card p {
     margin-top: 10px;
-    font-family: 'Black Ops One', cursive;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
     font-weight: bold;
+    font-size: 20px;
+    color: #161f73;
+    margin-bottom: 0px;
+
 }
 
 /* Hover effect for character cards */
@@ -220,4 +224,15 @@ transition: all .3s;
     background-color: #e0e0e0;
     transition: background-color 0.3s;
 }
+/**/
+.character-card b{
+color: white;
+display: flex;
+justify-content: center;
+background-color: #0652b8;
+}
+
+
+
+
 
