--- a/index.css
+++ b/index.css
@@ -10,6 +10,7 @@ body {
     justify-content: space-between;
     position: fixed;
     width: 100%;
+    z-index: 500;
 }
 
 #headertxt {
@@ -24,15 +25,26 @@ body {
     -webkit-user-select: none;
     touch-action: manipulation;
 }
-#headertxt:hover{
+
+#headertxt:hover {
     box-shadow: none 0 3px 15px inset, none 0 3px 5px, none 0 10px 13px;
     transform: scale(1.05);
 }
-#startparent{
+
+#startparent {
     padding-top: 35px;
     padding-right: 20px;
 }
-#letstart{
+.ricklogo{
+position: fixed;
+z-index: 500;
+background-color: white;
+right: 13px;
+border-radius: 8px;
+bottom: 16px;
+}
+
+#letstart {
     background-color: #2b5ec4;
     color: white;
     font-size: 18px;
@@ -48,108 +60,143 @@ body {
     -webkit-user-select: none;
     touch-action: manipulation;
 }
-#letstart:hover{
+
+#letstart:hover {
     background-color: #0a58f5;
     box-shadow: rgba(255, 255, 255, .2) 0 3px 15px inset, rgba(0, 0, 0, .1) 0 3px 5px, rgba(0, 0, 0, .1) 0 10px 13px;
     transform: scale(1.05);
 }
-.parent1{
+
+.parent1 {
     background-color: #234378;
     padding-bottom: 100px;
     padding-top: 120px;
     top: 0%;
 }
-.main{
+
+.main {
     display: flex;
-    color: white;
+
     justify-content: center;
     font-family: 'Black Ops One', cursive;
     gap: 20px;
     padding-top: 50px;
 
 }
-#all{
-background-color: #d43206;
-padding: 14px;
-width: 80px;
-border-radius: 16px;
-font-size: 16px;
-text-align: center;
-cursor: pointer;
-transition: all .3s;
-}
-#all:hover{
-    background-color:#f73b07 ;
-    box-shadow: rgba(255, 255, 255, .2) 0 3px 15px inset, rgba(0, 0, 0, .1) 0 3px 5px, rgba(0, 0, 0, .1) 0 10px 13px;
-    transform: scale(1.05);
-}
-#dead{
-    background-color: #02b2c9;
+
+#all {
+    font-family: 'Black Ops One', cursive;
+    height: 47px;
+    color: white;
+    background-color: #d43206;
     padding: 14px;
-    font-size: 16px;
+    width: 110px;
+    border: none;
     border-radius: 16px;
-    width: 80px;
-    text-align: center;
-cursor: pointer;
-transition: all .3s;
-}
-#dead:hover{
-    background-color:#07d7f2 ;
-    box-shadow: rgba(255, 255, 255, .2) 0 3px 15px inset, rgba(0, 0, 0, .1) 0 3px 5px, rgba(0, 0, 0, .1) 0 10px 13px;
-    transform: scale(1.05);
-}
-#alive{
-    background-color: #56ad05;
-    padding: 14px;
     font-size: 16px;
-    border-radius: 16px;
-    width: 80px;
-    text-align: center;
-cursor: pointer;
-transition: all .3s;
-}
-#alive:hover{
-    background-color:#71e605 ;
-    box-shadow: rgba(255, 255, 255, .2) 0 3px 15px inset, rgba(0, 0, 0, .1) 0 3px 5px, rgba(0, 0, 0, .1) 0 10px 13px;
-    transform: scale(1.05);
-}
-#unknown{
-    background-color:#06c982 ;
-    padding: 14px;
-    font-size: 16px;
-    border-radius: 16px;
-    width: 80px;
-    text-align: center;
-cursor: pointer;
-transition: all .3s;
-}
-#unknown:hover{
-    background-color:#11f2a0 ;
-    box-shadow: rgba(255, 255, 255, .2) 0 3px 15px inset, rgba(0, 0, 0, .1) 0 3px 5px, rgba(0, 0, 0, .1) 0 10px 13px;
-    transform: scale(1.05);
-}
-#back{
-    background-color: #9304c7;
-    padding: 14px;
-    font-size: 16px;
-    border-radius: 16px;
-    width: 80px;
     text-align: center;
     cursor: pointer;
     transition: all .3s;
 }
-#back:hover{
-    background-color:#c228fa ;
+
+#all:hover {
+    background-color: #f73b07;
     box-shadow: rgba(255, 255, 255, .2) 0 3px 15px inset, rgba(0, 0, 0, .1) 0 3px 5px, rgba(0, 0, 0, .1) 0 10px 13px;
     transform: scale(1.05);
 }
-.searchbuttonbox{
+
+#dead {
+    font-family: 'Black Ops One', cursive;
+    height: 47px;
+    color: white;
+    border: none;
+    background-color: #02b2c9;
+    padding: 14px;
+    font-size: 16px;
+    border-radius: 16px;
+    width: 110px;
+    text-align: center;
+    cursor: pointer;
+    transition: all .3s;
+}
+
+#dead:hover {
+    background-color: #07d7f2;
+    box-shadow: rgba(255, 255, 255, .2) 0 3px 15px inset, rgba(0, 0, 0, .1) 0 3px 5px, rgba(0, 0, 0, .1) 0 10px 13px;
+    transform: scale(1.05);
+}
+
+#alive {
+    font-family: 'Black Ops One', cursive;
+    height: 47px;
+    color: white;
+    border: none;
+    background-color: #56ad05;
+    padding: 14px;
+    font-size: 16px;
+    border-radius: 16px;
+    width: 110px;
+    text-align: center;
+    cursor: pointer;
+    transition: all .3s;
+}
+
+#alive:hover {
+    background-color: #71e605;
+    box-shadow: rgba(255, 255, 255, .2) 0 3px 15px inset, rgba(0, 0, 0, .1) 0 3px 5px, rgba(0, 0, 0, .1) 0 10px 13px;
+    transform: scale(1.05);
+}
+
+#unknown {
+    font-family: 'Black Ops One', cursive;
+    height: 47px;
+    color: white;
+    border: none;
+    background-color: #06c982;
+    padding: 14px;
+    font-size: 16px;
+    border-radius: 16px;
+    width: 110px;
+    text-align: center;
+    cursor: pointer;
+    transition: all .3s;
+}
+
+#unknown:hover {
+    background-color: #11f2a0;
+    box-shadow: rgba(255, 255, 255, .2) 0 3px 15px inset, rgba(0, 0, 0, .1) 0 3px 5px, rgba(0, 0, 0, .1) 0 10px 13px;
+    transform: scale(1.05);
+}
+
+#back {
+    font-family: 'Black Ops One', cursive;
+    height: 47px;
+    color: white;
+    border: none;
+    background-color: #9304c7;
+    padding: 14px;
+    font-size: 16px;
+    border-radius: 16px;
+    width: 110px;
+    text-align: center;
+    cursor: pointer;
+    transition: all .3s;
+}
+
+#back:hover {
+    background-color: #c228fa;
+    box-shadow: rgba(255, 255, 255, .2) 0 3px 15px inset, rgba(0, 0, 0, .1) 0 3px 5px, rgba(0, 0, 0, .1) 0 10px 13px;
+    transform: scale(1.05);
+}
+
+.searchbuttonbox {
     display: flex;
     justify-content: center;
     gap: 12px;
     padding-top: 40px;
 }
-.searchbox{
+
+.searchbox {
     width: 230px;
     height: 44px;
     border: none;
@@ -157,31 +204,35 @@ transition: all .3s;
     outline: none;
     border-radius: 8px;
 }
+
 /* Apply a background image to the input box 
 .search-input {
     background-image: url('/images/searchlogo2.png');
     background-size: 25px 25px;
     background-repeat: no-repeat;
   }*/
-  
-#searchbutton{
-border: none;
-padding: 0%;
-background-color: #0652b8;
-padding: 7px;
-border-radius: 8px;
-transition: all .3s;
+
+#searchbutton {
+    border: none;
+    padding: 0%;
+    background-color: #0652b8;
+    padding: 7px;
+    border-radius: 8px;
+    transition: all .3s;
 }
-#searchbutton:hover{
+
+#searchbutton:hover {
     background-color: #1e7cf7;
     box-shadow: rgba(255, 255, 255, .2) 0 3px 15px inset, rgba(0, 0, 0, .1) 0 3px 5px, rgba(0, 0, 0, .1) 0 10px 13px;
     transform: scale(1.05);
 }
-.searchimg{
+
+.searchimg {
     width: 30px;
     height: 30px;
     padding: 0%;
 }
+
 /**/
 
 
@@ -192,6 +243,7 @@ transition: all .3s;
     grid-template-columns: auto auto auto auto;
     padding-left: 20px;
     padding-right: 10px;
+    grid-row-gap: 34px;
 }
 
 .character-card {
@@ -200,6 +252,7 @@ transition: all .3s;
     border: 1px solid #ccc;
     background-color: #f9f9f9;
     border-radius: 8px;
+    cursor: pointer;
 }
 
 .character-card img {
@@ -210,29 +263,83 @@ transition: all .3s;
 
 .character-card p {
     margin-top: 10px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Black Ops One', cursive;
     text-align: center;
     font-weight: bold;
-    font-size: 20px;
-    color: #161f73;
+    font-size: 18px;
+    color: #234378;
     margin-bottom: 0px;
-
 }
 
 /* Hover effect for character cards */
 .character-card:hover {
     background-color: #e0e0e0;
     transition: background-color 0.3s;
+    box-shadow: none 0 3px 15px inset, none 0 3px 5px, none 0 10px 13px;
+    transform: scale(1.05);
 }
+
 /**/
-.character-card b{
-color: white;
-display: flex;
-justify-content: center;
-background-color: #0652b8;
+.character-card a {
+    color: green;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    padding-top: 6px;
+    padding-bottom: 6px;
 }
 
 
+.character-card b {
+    color: white;
+    display: flex;
+    justify-content: center;
+    background-color: #234378;
+    font-family: 'Roboto', sans-serif;
+    padding-top: 3px;
+    margin-bottom: 8px;
+    max-width: 260px;
+    margin-left: 20px;
+    height: 23px;
+    font-weight: 500;
+}
 
+.character-card d {
+    color: white;
+    display: flex;
+    justify-content: center;
+    background-color: #234378;
+    font-family: 'Roboto', sans-serif;
+    padding-top: 3px;
+    height: 23px;
+    max-width: 260px;
+    margin-bottom: 22px;
+    margin-left: 20px;
 
+}
 
+#pagination-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin: auto;
+    padding-top: 30px;
+}
+button{
+    width: 45px;
+    height: 45px;
+    cursor: pointer;
+    font-size: 16px;
+    color: #525050;
+    border: none;
+    transition: 0.3s;
+    border-radius: 6px;
+}
+button:hover{
+    background-color: #bdbbbb; 
+    box-shadow: none 0 3px 15px inset, none 0 3px 5px, none 0 10px 13px;
+    transform: scale(1.05);
+    color: #363636;
+}
